--- a/das.html
+++ b/das.html
@@ -52,11 +52,13 @@
    
     <div id="container">
         <div id="slide">
+            <button type="button" class="slide-btn" id="pre"><-</button>
             <img src="/images/inception.jpeg" class="movieImg">
             <img src="/images/interstellar.jpeg" class="movieImg">
             <img src="/images/intouchables.jpeg" class="movieImg">
             <img src="/images/django.jpeg" class="movieImg">
             <img src="/images/joker.jpeg" class="movieImg">
+            <button type="button" class="slide-btn" id="next">-></button>
         </div> 
         <form id="form">
             <h1>Which is your favourite movie from above?</h1>
